fix: expansion-panel collapse should hide content (#586)

--- a/src/angular-public/accordion/expansion-panel/expansion-panel.component.scss
+++ b/src/angular-public/accordion/expansion-panel/expansion-panel.component.scss
@@ -4,6 +4,7 @@
   box-sizing: content-box;
   display: block;
   margin: 0;
+  overflow: hidden;
   transition: margin 225ms $sbb-accordion-timing-function;
   border: 1px solid transparent;
 
